# colorman

./: .gitignore  CMakeLists.txt  README.md  about.ui  build.sh  colorman.cpp  colorman.h  colorman.ui  imagewidget.cpp  imagewidget.h  mac.h  mac.mm  main.cpp  vectorscopewidget.cpp  vectorscopewidget.h
resources/: App.css  AppIcon.icns
scripts/: macdeploy.sh
sources/colorman/: CMakeLists.txt  colorman.cpp  colorman.h  colorman.ui  imagewidget.cpp  imagewidget.h  mac.mm  main.cpp  window.cpp
sources/colorman/core/: colorman.cpp
sources/colorman/include/: colorman.h  mac.h  pythoninterpreter.h  pythonwidget.h  vectorscopewidget.h  window.h
sources/colorman/python/: pycolorman.cpp  pythoninterpreter.cpp  pythonwidget.cpp
sources/colorman/resources/: AppIcon.icns  MacOSXBundle.plist.in
sources/colorman/widgets/: colortools.cpp  imagewidget.cpp  vectorscopewidget.cpp
sources/core/: CMakeLists.txt  application.cpp  file.cpp  fileformat.cpp  range.cpp
sources/gfx/: CMakeLists.txt
sources/gui/: CMakeLists.txt  application.cpp
sources/include/core/: application.h  core.h  file.h  fileformat.h  macro.h  range.h
sources/include/gui/: application.h
sources/include/widgets/: application.h  widgets.h
sources/python/: CMakeLists.txt  py_file.cpp
sources/tests/: CMakeLists.txt  oiio_file.cpp  oiio_normaldistribution.cpp  oiio_viewer.cpp  py_colorman.py  py_colortransformation.py  py_dustandscratches.py  py_generatefiles.py
sources/widgets/: CMakeLists.txt  application.cpp
